fix overflow

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -2,6 +2,8 @@
 
 .container {
   height: 180px;
+  overflow: hidden;
+
 }
 
 .title {
