--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+
 }
 
 .text_block {
