--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,5 +1,7 @@
 @import url("../../ulits/colors.css");
-
+.container {
+  overflow: hidden;
+}
 .title {
   color: var(--orange);
   font-weight: 700;
