--- a/src/components/Works/Works.module.css
+++ b/src/components/Works/Works.module.css
@@ -3,6 +3,7 @@
 .container {
   width: 1280px;
   margin: 50px auto;
+  overflow: hidden;
 }
 
 .title {
